Fix for Navigation CSS Issues on Firefox 27.0.1 on OS X 10.8 #184

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -454,8 +454,10 @@ div.abbr_comment {
   li.feed-folder .nav-header {
     margin-bottom: 0;
     font-weight: normal;
-
     text-transform: none;
+    display: block;
+    clear: both;
+    padding-bottom: 5px;
 
     i {
       line-height: 1.5em;
